--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,15 @@
 {
-    "require-dev": {
-        "php": "^8.1",
-        "phpunit/phpunit": "^9.5"
-    },
-    "autoload": {
-        "psr-4": {
-            "Shin1x1\\": "src/Shin1x1"
-        }
-    },
-    "require": {
-        "cakephp/chronos": "^2.2"
+  "require-dev": {
+    "php": "^8.1",
+    "phpunit/phpunit": "^9.5"
+  },
+  "autoload": {
+    "psr-4": {
+      "Shin1x1\\": "src/Shin1x1",
+      "Tekihei2317\\": "src/Tekihei2317"
     }
+  },
+  "require": {
+    "cakephp/chronos": "^2.2"
+  }
 }
